Add support for creating native images